# shock2quest

./: .gitignore  Cargo.toml  DEVELOPMENT.md  README.md
dark/: Cargo.toml
dark/src/: bitmap_animation.rs  font.rs  lib.rs  model.rs  name_map.rs  ss2_bin_ai_loader.rs  ss2_bin_header.rs  ss2_bin_obj_loader.rs  ss2_cal_loader.rs  ss2_chunk_file_reader.rs  ss2_common.rs  ss2_entity_info.rs  ss2_skeleton.rs  tag_database.rs
dark/src/audio/: mod.rs  song.rs  song_player.rs
dark/src/gamesys/: env_map.rs  env_sound_query.rs  gamesys.rs  mod.rs  sound_schema.rs  speech_db.rs
dark/src/importers/: animation_clip_importer.rs  audio_importer.rs  bitmap_animation_importer.rs  font_importer.rs  mod.rs  model_importer.rs  motiondb_importer.rs  skeleton_importer.rs  song_importer.rs  strings_importer.rs  texture_importer.rs
dark/src/mission/: bsp_tree.rs  cell.rs  cell_portal.rs  mod.rs  plane.rs  render_params.rs  room.rs  room_database.rs  scene_builder.rs  song_params.rs  texture_list.rs
dark/src/motion/: animation_clip.rs  animation_player.rs  mod.rs  motion_clip.rs  motion_info.rs  motion_query.rs  motion_schema.rs
dark/src/properties/: accumulator.rs  mod.rs  prop_ai.rs  prop_ambient_hacked.rs  prop_anim_tex.rs  prop_bitmap_animation.rs  prop_collision_type.rs  prop_creature_pose.rs  prop_frame_anim_config.rs  prop_frame_anim_state.rs  prop_frob_info.rs  prop_hit_points.rs  prop_key.rs  prop_log.rs  prop_particles.rs  prop_phys_attr.rs  prop_phys_initial_velocity.rs  prop_phys_type.rs  prop_player_gun.rs  prop_quest_bit.rs  prop_render_type.rs  prop_replicator.rs  prop_room_gravity.rs  prop_trip_flags.rs  prop_tweq.rs
dark/src/util/: merge_maps.rs  mod.rs
engine/: Cargo.toml
engine/src/: engine.rs  font.rs  gl_engine.rs  lib.rs  macros.rs  shader.rs  shader_program.rs  texture.rs  texture_atlas.rs  texture_descriptor.rs  texture_format.rs  util.rs
engine/src/assets/: asset_cache.rs  asset_importer.rs  asset_paths.rs  asset_processor.rs  mod.rs
engine/src/audio/: mod.rs  output.rs
engine/src/file_system/: android_file_system.rs  default_file_system.rs  file_system.rs  mod.rs  storage.rs
engine/src/importers/: fbx_importer.rs  mod.rs
engine/src/materials/: lightmap_material.rs  mod.rs  screen_space_material.rs
engine/src/scene/: basic_material.rs  billboard_material.rs  color_material.rs  cube.rs  cube_indexed.rs  geometry.rs  lines_mesh.rs  material.rs  mesh.rs  mod.rs  particles.rs  plane.rs  quad.rs  scene.rs  scene_object.rs  skinned_material.rs  vertex.rs
runtimes/desktop_runtime/: .gitignore  Cargo.toml  profile_release.sh
runtimes/desktop_runtime/src/: main.rs
runtimes/oculus_runtime/: .gitignore  Cargo.toml  logcat.sh  set_up_android_sdk.sh
runtimes/oculus_runtime/src/: android_permissions.rs  lib.rs
shock2vr/: Cargo.toml
shock2vr/src/: input_context.rs  lib.rs  quest_info.rs  runtime_props.rs  time.rs  util.rs  virtual_hand.rs  vr_config.rs  zip_asset_path.rs
shock2vr/src/command/: mod.rs  move_inventory_command.rs  spawn_item_command.rs
shock2vr/src/creature/: creature_definitions.rs  hit_box_script.rs  hit_boxes.rs  mod.rs
shock2vr/src/gui/: gui_component.rs  gui_manager.rs  gui_script.rs  mod.rs  proxy_gui_script.rs
shock2vr/src/hud/: item_outline.rs  mod.rs
shock2vr/src/inventory/: mod.rs  player_inventory_entity.rs
shock2vr/src/mission/: entity_creator.rs  mod.rs  spawn_location.rs
shock2vr/src/mission/entity_populator/: empty_entity_populator.rs  entity_populator.rs  mission_entity_populator.rs  mod.rs  save_file_entity_populator.rs
shock2vr/src/mission/visibility_engine/: culling_info.rs  mod.rs  portal_visibility_engine.rs  visibility_engine.rs
shock2vr/src/physics/: debug_render_pipeline.rs  mod.rs  physics_events.rs  util.rs
shock2vr/src/save_load/: entity_save_data.rs  held_item_save_data.rs  mod.rs  save_data.rs
shock2vr/src/scripts/: base_button.rs  base_elevator.rs  base_monster.rs  choose_service.rs  core_room.rs  create_sound.rs  dead_power_cell.rs  destroy_all_by_name.rs  effect.rs  energy_station.rs  frob_qb.rs  internal_collision_type.rs  internal_fast_projectile.rs  internal_keycard_script.rs  internal_simple_health.rs  internal_switch_held_model.rs  level_change_button.rs  logdiscscript.rs  melee_weapon.rs  mod.rs  obj_consume_button.rs  once_room.rs  once_router.rs  room_trigger.rs  script_util.rs  std_door.rs  tool_consumable.rs  trap_delay.rs  trap_destroyer.rs  trap_email.rs  trap_exp_once.rs  trap_inverter.rs  trap_new_tripwire.rs  trap_off_filter.rs  trap_on_filter.rs  trap_qb_filter.rs  trap_qb_neg_filter.rs  trap_qb_set.rs  trap_questbit_simple.rs  trap_router.rs  (+13 more)
shock2vr/src/scripts/ai/: ai_util.rs  animated_monster_ai.rs  behavior.rs  camera_ai.rs  mod.rs  steering.rs  (+1 more)
shock2vr/src/systems/: bitmap_animation.rs  mod.rs  tweq.rs  update_teleported_state.rs
(+44 files in other folders)
