[package]
name = "dark"
version = "0.1.0"
edition = "2021"

[lib]
name = "dark"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3.2"
byteorder = "1.4.3"
c_string = "0.7.2"
cgmath = "0.18.0"
collision = { version = "0.20.1", git = "https://github.com/rustgd/collision-rs" }
engine = { path = "../engine" }
gl = "0.14.0"
image = "0.24.3"
lazy_static = "1.4.0"
num = "0.4.0"
num-derive = "0.3.3"
num-traits = "0.2.15"
once_cell = "1.17.0"
pcx = "0.2.3"
rand = "0.8.5"
rpds = "0.13.0"
serde = "1.0.164"
serde_json = "1.0.102"
shipyard = "0.6.2"
tracing = "0.1.37"
