[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[lib]
name = "engine"
path = "src/lib.rs"

[profile.dev.package.rapier3d]
opt-level = 3
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.19.0"
ndk = "0.7.0"
ndk-context = "0.1.1"
ndk-sys = "0.4.0"

[dependencies]
c_string = "0.7.2"
cgmath = "0.18.0"
cpal = "0.14.2"
fbxcel-dom = "0.0.10"
gl = "0.14.0"
hound = "3.5.0"
image = "0.24.3"
lazy_static = "1.4.0"
oddio = "0.6.2"
once_cell = "1.17.0"
pcx = "0.2.3"
rand = "0.8.5"
rb = "0.4.1"
rodio = { git = "https://github.com/RustAudio/rodio", version = "0.17.1", features=["symphonia-all"], default-features=false }
tracing = "0.1.37"
