[package]
name = "shock2vr"
version = "0.0.1"
edition = "2021"

[lib]
name = "shock2vr"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3.2"
cgmath = { version = "0.18.0", features = ["serde"] }
collision = { version = "0.20.1", git = "https://github.com/rustgd/collision-rs" }
engine = { path = "../engine" }
num = "0.4.0"
num-derive = "0.3.3"
num-traits = "0.2.15"
once_cell = "1.17.0"
ordered-float = "3.4.0"
pcx = "0.2.3"
rapier3d = { version = "0.17.2", features = ["debug-render"] }
serde_json = "1.0.91"
shipyard = "0.6.2"
dark = { path = "../dark" }
tracing = "0.1.37"
zip = "0.6.6"
serde = "1.0.164"
fbxcel-dom = "0.0.10"
rand = "0.8.5"
