[package]
name = "desktop_runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = "0.14.0"
glfw = "0.56.0"
engine = { path = "../../engine" }
dark = { path = "../../dark" }
shock2vr = { path = "../../shock2vr" }
cgmath = "0.18.0"
byteorder = "1.4.3"
pcx = "0.2.3"
image = "0.24.5"
lazy_static = "1.4.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
bitflags = "1.3.2"
num = "0.4.0"
clap = { version = "4.3.5", features = ["derive"] }
