[package]
name = "hello_world_android5"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]

[package.metadata.android]
build_targets = ["aarch64-linux-android"]
runtime_libs = "lib"
assets = "./../../assets"

[package.metadata.android.sdk]
min_sdk_version = 21
target_sdk_version = 26

[package.metadata.android.application.activity]
theme = "@android:style/Theme.Black.NoTitleBar.Fullscreen"
config_changes = "density|keyboard|keyboardHidden|navigation|orientation|screenLayout|screenSize|uiMode"
launch_mode = "singleTask"
orientation = "landscape"
resizeable_activity = false

[[package.metadata.android.uses_permission]]
name = "android.permission.WRITE_EXTERNAL_STORAGE"

[[package.metadata.android.uses_permission]]
name = "android.permission.READ_EXTERNAL_STORAGE"

[[package.metadata.android.application.activity.intent_filter]]
actions = ["android.intent.action.MAIN"]
categories = [
    "com.oculus.intent.category.VR",
    "android.intent.category.LAUNCHER",
]

[package.metadata.android.signing.release]
path = "./develop.keystore"
keystore_password = "tommyshock"

# This dependency will only be included when targeting Android
[target.'cfg(target_os = "android")'.dependencies]
ndk-glue = "0.6.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo-apk = "0.9.7"
gl = "0.14.0"
khronos-egl = { version = "4.1.0", features = ["dynamic"] }
libloading = "0.7.3"
openxr = { path = "../../vendor/openxrs/openxr" }
engine = { path = "../../engine" }
shock2vr = { path = "../../shock2vr" }
pcx = "0.2.3"
dark = { path = "../../dark" }
ndk = "0.7.0"
ndk-context = "0.1.1"
oboe = { version = "0.5", features = [ "java-interface", "shared-stdcxx" ] }
jni = "0.19.0"
ndk-sys = "0.4.0"
cgmath = "0.18.0"
libm = "0.2.5"
lazy_static = "1.4.0"
tokio = { version = "1.22.0", features = ["full"] }
